# fake_parallel_printer

./: .gitignore  LICENSE  README.md  code.py  fake_printer.py  notes.md  parallel2usb_hd_on.uf2  pcb_bringup.py
c/: CMakeLists.txt  README.md
c/parallel2usb/: CMakeLists.txt  main.cc
examples/: run.sh  tds420a_eps_color_a.eps  tds420a_eps_color_b.eps  tds420a_eps_color_portrait.eps  tds420a_eps_mono_image_portrait_a.eps  tds420a_eps_mono_image_portrait_b.eps  tds420a_strobe_ack_eps_mono.eps
examples/r3273/: r3273_esc_p_gray_0.esc_p  r3273_esc_p_mono_l_0.esc_p  r3273_esc_p_mono_s_0.esc_p  r3273_esc_p_raster_color_0.esc_p_rast  r3273_esc_p_raster_gray_0.esc_p_rast  r3273_esc_p_raster_mono_l_0.esc_p_rast  r3273_esc_p_raster_mono_s_0.esc_p_rast  r3273_esc_p_raster_s_color_l_0.esc_p_rast  r3273_esc_p_raster_s_color_s_0.esc_p_rast  r3273_pcl_color_0.pcl  r3273_pcl_gray_0.pcl  r3273_pcl_mono_l_0.pcl  r3273_pcl_mono_s_0.pcl  r3273_pcl_s_color_l_0.pcl  r3273_pcl_s_color_s_0.pcl
examples/tds420a/: tds420a_deskjet_0.pcl  tds420a_dpu411_0.prtcap  tds420a_dpu412_0.prtcap  tds420a_eps_color_plt_0.eps  tds420a_eps_mono_img_0.eps  tds420a_eps_mono_plt_0.eps  (+7 more)
parallel2usb/: #auto_saved_files#  fp-info-cache  fp-lib-table  parallel2usb.kicad_pcb  parallel2usb.kicad_prl  parallel2usb.kicad_pro  parallel2usb.kicad_sch  sym-lib-table
parallel2usb_v1/: .gitignore  74lvc161284.kicad_sym  parallel2usb.kicad_pro  parallel2usb.kicad_sch  sn74lvc8t245.kicad_sym
parallel2usb_v2/: fp-info-cache  parallel2usb.kicad_pcb  parallel2usb.kicad_prl  parallel2usb.kicad_pro  parallel2usb.kicad_sch
(+36 files in other folders)
